Bug 341772 - Dont pop up software keyboard when hardware keyboard exists. r=dougt