widget/src/windows/nsWindowCE.cpp
@@ -66,6 +66,7 @@ PRBool          nsWindow::sSoftKeyMenuBar         = PR_FALSE;
 PRBool          nsWindow::sSoftKeyboardState      = PR_FALSE;
 PRBool          nsWindowCE::sSIPInTransition      = PR_FALSE;
 TriStateBool    nsWindowCE::sShowSIPButton        = TRI_UNKNOWN;
+TriStateBool    nsWindowCE::sHardKBPresence       = TRI_UNKNOWN;
 #endif
 
 /**************************************************************
@@ -104,6 +105,16 @@ void nsWindowCE::NotifySoftKbObservers(LPRECT visRect)
 
 void nsWindowCE::ToggleSoftKB(PRBool show)
 {
+  if (sHardKBPresence == TRI_UNKNOWN)
+    CheckKeyboardStatus();
+
+  if (sHardKBPresence == TRI_TRUE) {
+    if (GetSliderStateOpen() != TRI_FALSE) {
+      show = PR_FALSE;
+      sShowSIPButton = TRI_FALSE;
+    }
+  }
+
   sSIPInTransition = PR_TRUE;
   HWND hWndSIP = FindWindowW(L"SipWndClass", NULL );
   if (hWndSIP)
@@ -202,6 +213,78 @@ void nsWindowCE::CreateSoftKeyMenuBar(HWND wnd)
   
   sSoftKeyMenuBar = mbi.hwndMB;
 }
+
+void nsWindowCE::CheckKeyboardStatus()
+{
+  HKEY  hKey = 0;
+  LONG  result = 0;
+  DWORD entryType = 0;
+  DWORD hwkbd = 0;
+  DWORD paramSize = sizeof(DWORD);
+ 
+  result = RegOpenKeyExW(HKEY_CURRENT_USER, 
+                           L"SOFTWARE\\Microsoft\\Shell", 
+                           0, 
+                           KEY_READ,
+                           &hKey); 
+
+  if (result != ERROR_SUCCESS)
+  {
+    sHardKBPresence = TRI_FALSE;
+    return;
+  }
+
+  result = RegQueryValueEx(hKey,
+                             L"HasKeyboard",
+                             NULL, 
+                             &entryType, 
+                             (LPBYTE)&hwkbd, 
+                             &paramSize);
+
+  if (result != ERROR_SUCCESS)
+  {
+    RegCloseKey(hKey);
+    sHardKBPresence = TRI_FALSE;
+    return;
+  }
+    
+  sHardKBPresence = hwkbd ? TRI_TRUE : TRI_FALSE;
+}
+
+TriStateBool nsWindowCE::GetSliderStateOpen()
+{
+
+  HKEY  hKey = 0;
+  LONG  result = 0;
+  DWORD entryType = 0;
+  DWORD sliderStateOpen = 0;
+  DWORD paramSize = sizeof(DWORD);
+
+  result = RegOpenKeyExW(HKEY_LOCAL_MACHINE, 
+                           L"System\\GDI\\Rotation", 
+                           0, 
+                           KEY_READ,
+                           &hKey); 
+
+  if (result != ERROR_SUCCESS)
+    return TRI_UNKNOWN;
+
+  result = RegQueryValueEx(hKey,
+                             L"Slidekey",
+                             NULL, 
+                             &entryType, 
+                             (LPBYTE)&sliderStateOpen, 
+                             &paramSize);
+
+  if (result != ERROR_SUCCESS)
+  {
+     RegCloseKey(hKey);
+     return TRI_UNKNOWN;
+  }
+    
+  return  sliderStateOpen ? TRI_TRUE : TRI_FALSE;
+}
+
 #endif  //defined(WINCE_HAVE_SOFTKB)
 
 typedef struct ECWWindows
